--- a/3.19.2020/dummy/src/App.css
+++ b/3.19.2020/dummy/src/App.css
@@ -3,9 +3,27 @@
     flex-wrap: wrap;
     justify-content: space-around;
 }
+.align{
+    margin: 20px 0;
+    text-align: center;
+}
+.align button{
+    margin: 0 10px;
+    padding: 6px 30px;
+    font-weight: bold;
+    background-color: inherit;
+    border: 1px solid #333;
+    border-radius: 12px;
+    outline: none;
+    cursor: pointer;
+}
+.align button:hover{
+    background-color: #333;
+}
 .box{
-    margin-bottom: 20px;
     width: 400px;
+    margin-bottom: 20px;
+    padding: 10px;
     background-color: #999;
     border: 1px solid #333;
     border-radius: 12px;
